--- a/gg-project-master/css/container/container-home.css
+++ b/gg-project-master/css/container/container-home.css
@@ -16,12 +16,12 @@ body {
   width: 100%;
 }
 
-.wrapper{
+.wrapper-__ct-nav{
   max-width: 1200px;
-  width: 100%;
   margin: 0 auto;
   padding: 0 12px;
 }
+
 
 .navigation {
   display: flex;
