--- a/gg-project-master/css/media/media-pc.css
+++ b/gg-project-master/css/media/media-pc.css
@@ -12,11 +12,41 @@
     .btn-registry,.btn-login{
         display: none;
     }
-    .event-1, .event-2, .event-3{
+    /* .event-1, .event-2, .event-3{
         width: 200px;
         height: 200px;
-    }
+    } */
     .event__desc{
         display: none;
     }
+   
+}
+
+
+
+@media screen and (max-width: 1200px) {
+    /* .ng__block-slot1:nth-of-type(3){
+        display: none;
+    }
+    .ng__block-slot2:nth-of-type(3){
+        display: none;
+    } */
+}
+
+@media screen and (max-width: 1400px){
+    .our-targets__title{
+        font-size: 40px;
+    }
+}
+@media screen and (max-width: 900px){
+    .our-targets__title{
+        font-size: 30px;
+    }
+
+}
+@media screen and (max-width: 720px){
+    .our-targets__title{
+        font-size: 20px;
+    }
+
 }
