--- a/gg-project-master/css/container/container-bonus.css
+++ b/gg-project-master/css/container/container-bonus.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   margin-top: 300px;
-  height: 700px;
 }
 
 .bonus-mid {
@@ -38,7 +37,7 @@
   margin-top: 100px;
 }
 .bonus-but {
-  width: 350px;
+  width: 300px;
   color: white;
   font-weight: bold;
 }
@@ -77,10 +76,30 @@
   font-size: 35px;
   background: #000000;
   transition: cubic-bezier(0.23, 1, 0.32, 1) 0.7s all;
-  -webkit-box-shadow: 1px 0px 18px 23px rgba(217, 0, 217, 1);
-  -moz-box-shadow: 1px 0px 18px 23px rgba(217, 0, 217, 1);
-  box-shadow: 1px 0px 18px 23px rgba(217, 0, 217, 1);
+  -webkit-box-shadow: 2px 0px 13px 12px rgba(217, 0, 217, 1);
+-moz-box-shadow: 2px 0px 13px 12px rgba(217, 0, 217, 1);
+box-shadow: 2px 0px 13px 12px rgba(217, 0, 217, 1);
 }
+.glow-button {
+  text-decoration: none;
+  display: none;
+  padding: 15px 30px;
+  margin: 10px 20px;
+  width:100px ;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0 0 40px 40px #F137A6 inset, 0 0 0 0 #F137A6;
+  font-weight: bold;
+  color: white;
+  transition: .15s ease;
+}
+.glow-button:hover {
+  box-shadow: 0 0 10px 0 #F137A6 inset, 0 0 10px 4px #F137A6;
+  color: #F137A6;
+}
+
 
 .bonus-logo {
   margin-top: 25%;
