--- a/gg-project-master/css/container/container-our-partners.css
+++ b/gg-project-master/css/container/container-our-partners.css
@@ -7,19 +7,19 @@
     display: flex;
     justify-content: center;
     font-family: Courier, monospace;
-    font-size: 70px;
+    font-size: 52px;
     font-weight: bolder;
   }
   .partners-top{
     align-items: center;
-    height: 200px;
-    min-width: 100%;
+    height: 275px;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
   }
   .partners {
-    font-size: 50px;
+    font-size: 60px;
     text-align: center;
     width: 250px;
     height: 70px;
@@ -47,11 +47,12 @@
   } */
   .partners-bot {
     align-items: center;
-    height: 200px;
+    height: 250px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+
   }
   /* .our-partners__size-1 {
     width: 200px;
@@ -74,6 +75,6 @@
     height: 120px;
   } */
   .partners-wrapper{
-    max-width: 1200px;
+    max-width: 800px;
     margin: 0 auto;
   }
