--- a/gg-project-master/css/container/container-bonus.css
+++ b/gg-project-master/css/container/container-bonus.css
@@ -2,27 +2,28 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-top: 300px;
 }
 
 .bonus-mid {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: row;
+  
+}
+.bonus-left,.bonus-right{
 }
 .bonus-left {
   background-image: url(https://images.wallpapersden.com/image/download/rgb-rain_bGtqbWyUmZqaraWkpJRobWllrWdma2U.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
   width: 65%;
 }
 .bonus-right {
   font-family: "PT Sans Narrow", sans-serif;
   background-color: black;
+  background-size: cover;
+
   width: 35%;
-  height: 100vh;
 }
 .bonus-text {
   font-size: 40px;
@@ -34,7 +35,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
 }
 .bonus-but {
   width: 300px;
@@ -102,9 +102,8 @@ box-shadow: 2px 0px 13px 12px rgba(217, 0, 217, 1);
 
 
 .bonus-logo {
-  margin-top: 25%;
-  margin-left: 15%;
-  width: 100%;
-  height: 25%;
+color:rgb(255, 255, 255);
   font-size: 105px;
+  text-align: center;
+padding-top: 150px;;
 }
