--- a/gg-project-master/css/container/container-events.css
+++ b/gg-project-master/css/container/container-events.css
@@ -1,6 +1,4 @@
 .container__events {
-    top: 50px;
-    position: relative;
     width: 100%;
     background-color: #2c2c2c;
   }
@@ -13,7 +11,6 @@
   }
   .events-mid {
     width: 100%;
-    height: 500px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -23,11 +20,14 @@
 
   .event-hov {
     transition: cubic-bezier(0.215, 0.61, 0.355, 1) 3s;
-    width: 400px;
-    height: 250px;
+    max-width: 400px;
+    width: 100%;
+    max-height: 250px;
+    height: 100%;
+
     background-image: url("https://s0.rbk.ru/v6_top_pics/media/img/6/03/756148808557036.jpg");
     background-size: 100%;
-    opacity: 0.1;
+    /* opacity: 0.1; */
     border-radius: 4%;
   }
   .event-subtitle {
@@ -41,14 +41,21 @@
     font-size: 25px;
   }
   .event-desc {
-    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 400px;
-    height: 250px;
-    top: 300px;
+    max-height: 250px;
+    height: 100%;
+    max-width: 400px;
+    width: 100%;
+  }
+  .event-desc > *{
+    visibility: hidden;
+  }
+  .event-desc:hover > *{
+    visibility: visible;
+
   }
   /* Cделать наоборот */
   .event:hover > .event-desc:not(.event-hov) {
