--- a/gg-project-master/css/container/container-our-targets.css
+++ b/gg-project-master/css/container/container-our-targets.css
@@ -44,6 +44,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
   }
   .target-cap {
     color: white;
