--- a/gg-project-master/css/container/container-bonus.css
+++ b/gg-project-master/css/container/container-bonus.css
@@ -8,10 +8,8 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  
 }
-.bonus-left,.bonus-right{
-}
+
 .bonus-left {
   background-image: url(https://images.wallpapersden.com/image/download/rgb-rain_bGtqbWyUmZqaraWkpJRobWllrWdma2U.jpg);
   background-repeat: no-repeat;
@@ -40,6 +38,8 @@
   width: 300px;
   color: white;
   font-weight: bold;
+  transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.7s all;
+
 }
 .bonus-but::after {
   font-size: 35px;
@@ -64,6 +64,8 @@
   -webkit-transform: skewX(-12deg);
   -ms-transform: skewX(-12deg);
   transform: skewX(-12deg);
+  transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.7s all;
+
 }
 .bonus-but:hover {
   font-size: 35px;
@@ -77,33 +79,45 @@
   background: #000000;
   transition: cubic-bezier(0.23, 1, 0.32, 1) 0.7s all;
   -webkit-box-shadow: 2px 0px 13px 12px rgba(217, 0, 217, 1);
--moz-box-shadow: 2px 0px 13px 12px rgba(217, 0, 217, 1);
-box-shadow: 2px 0px 13px 12px rgba(217, 0, 217, 1);
+  -moz-box-shadow: 2px 0px 13px 12px rgba(217, 0, 217, 1);
+  box-shadow: 2px 0px 13px 12px rgba(217, 0, 217, 1);
 }
 .glow-button {
   text-decoration: none;
   display: none;
   padding: 15px 30px;
   margin: 10px 20px;
-  width:100px ;
+  width: 100px;
   height: 50px;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  box-shadow: 0 0 40px 40px #F137A6 inset, 0 0 0 0 #F137A6;
+  box-shadow: 0 0 40px 40px #f137a6 inset, 0 0 0 0 #f137a6;
   font-weight: bold;
   color: white;
-  transition: .15s ease;
+  transition: 0.15s ease;
 }
 .glow-button:hover {
-  box-shadow: 0 0 10px 0 #F137A6 inset, 0 0 10px 4px #F137A6;
-  color: #F137A6;
+  box-shadow: 0 0 10px 0 #f137a6 inset, 0 0 10px 4px #f137a6;
+  color: #f137a6;
 }
 
-
-.bonus-logo {
-color:rgb(255, 255, 255);
-  font-size: 105px;
+.bonus-logo{
+ 
   text-align: center;
-padding-top: 150px;;
+  padding-top: 150px;
+}
+.bonus-logo a{
+  text-decoration: none;
+  font-size: 95px;
+  color: rgb(255, 255, 255);
+  transition: 0.4s ease;
+
+}
+.bonus-logo a:hover{
+  transition: 0.4s ease;
+  font-size: 130x;
+  text-decoration: none;
+  font-size: 105px;
+  color: rgb(234, 0, 255);
 }
