--- a/gg-project-master/css/container/container-events.css
+++ b/gg-project-master/css/container/container-events.css
@@ -1,86 +1,90 @@
 .container__events {
-    width: 100%;
-    background-color: #2c2c2c;
-  }
-  .events-title {
-    padding-top: 100px;
-    display: flex;
-    justify-content: center;
-    font-size: 75px;
-    color: rgb(233, 13, 196);
-  }
-  .events-mid {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+  width: 100%;
+  background-color: #2c2c2c;
+}
+.events-title {
+  padding-top: 100px;
+  display: flex;
+  justify-content: center;
+  font-size: 75px;
+  color: rgb(233, 13, 196);
+}
+.events-mid {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding-bottom: 70px;
+}
 
-  }
+.event-hov {
+  transition: cubic-bezier(0.215, 0.61, 0.355, 1) 3s;
+  max-width: 400px;
+  width: 100%;
+  max-height: 250px;
+  height: 100%;
 
-  .event-hov {
-    transition: cubic-bezier(0.215, 0.61, 0.355, 1) 3s;
-    max-width: 400px;
-    width: 100%;
-    max-height: 250px;
-    height: 100%;
+  background-image: url("https://s0.rbk.ru/v6_top_pics/media/img/6/03/756148808557036.jpg");
+  background-size: 100%;
+  /* opacity: 0.1; */
+  border-radius: 4%;
+}
+.event-subtitle {
+  font-weight: bold;
+  font-size: 15px;
+  text-align: center;
+}
+.event-cap {
+  color: rgb(201, 0, 191);
+  font-weight: bolder;
+  font-size: 25px;
+}
+.event-desc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-height: 250px;
+  height: 100%;
+  max-width: 400px;
+  width: 100%;
+}
+.event-desc > * {
+  visibility: hidden;
+}
+.event-desc:hover > * {
+  visibility: visible;
+}
+/* Cделать наоборот */
+.event:hover > .event-desc:not(.event-hov) {
+  display: none;
+}
 
-    background-image: url("https://s0.rbk.ru/v6_top_pics/media/img/6/03/756148808557036.jpg");
-    background-size: 100%;
-    /* opacity: 0.1; */
-    border-radius: 4%;
-  }
-  .event-subtitle {
-    font-weight: bold;
-    font-size: 15px;
-    text-align: center;
-  }
-  .event-cap {
-    color: rgb(201, 0, 191);
-    font-weight: bolder;
-    font-size: 25px;
-  }
-  .event-desc {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    max-height: 250px;
-    height: 100%;
-    max-width: 400px;
-    width: 100%;
-  }
-  .event-desc > *{
-    visibility: hidden;
-  }
-  .event-desc:hover > *{
-    visibility: visible;
-
-  }
-  /* Cделать наоборот */
-  .event:hover > .event-desc:not(.event-hov) {
-    display: none;
-  }
-  
-  .event:hover > .event-hov:not(.event-desc) {
-    opacity: 1;
-    transition: cubic-bezier(0.215, 0.61, 0.355, 1) 3s;
-  }
-
-  .btn-readmore a {
-    margin-left: 120px;
-    text-decoration: none;
-    color: rgb(247, 0, 255);
-  }
-  .btn-readmore a:hover {
-    color: rgb(73, 0, 141);
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-  }
-  .events-wrapper{
-    max-width: 1400px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 0 auto;
-  }
+.event:hover > .event-hov:not(.event-desc) {
+  opacity: 1;
+  transition: cubic-bezier(0.215, 0.61, 0.355, 1) 3s;
+}
+.btn-readmore {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-readmore a {
+  text-decoration: none;
+  text-align: center;
+  color: rgb(247, 0, 255);
+}
+.btn-readmore a:hover {
+  color: rgb(73, 0, 141);
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+.events-wrapper {
+  max-width: 1400px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 auto;
+}
