--- a/gg-project-master/css/container/container-footer.css
+++ b/gg-project-master/css/container/container-footer.css
@@ -1,70 +1,91 @@
 .container__footer {
-    width: 100%;
-    background-color: #0f0f0f;
-  }
-  .footer-title {
-    color: rgb(255, 0, 149);
-    font-size: 29px;
-  }
-  .footer-subtitle {
-    font-size: 17px;
-  }
-  .footer-mid {
-    margin: 0 auto;
-    padding-top: 70px;
-  }
-  .footer-desc {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    line-height: 50px;
-  }
-  
-  .footer-links {
-    color: rgb(221, 221, 221);
-    padding-top: 60px;
-    width: 25%;
-    font-size: 30px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  .rights {
-    opacity: 0.6;
-    text-align: center;
-    color: #ddd;
-    padding-top: 10px;
-    width: 25%;
-    margin: 0 auto;
-  }
-  .by {
-    opacity: 0.2;
-    text-align: center;
-    color: #ddd;
-    padding-top: 10px;
-    width: 35%;
-    margin: 0 auto;
-  }
-  .footer-desc a {
-    text-decoration: none;
-    color: rgb(174, 0, 255);
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) all 1s;
-  }
-  .footer-desc a:hover {
-    color: rgb(255, 255, 255);
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) all 1s;
-  }
-  .footer-block{
+  width: 100%;
+  background-color: #0f0f0f;
+}
+.footer-title {
+  color: rgb(255, 0, 149);
+  font-size: 29px;
+}
+.footer-subtitle {
+  font-size: 17px;
+  text-align: center;
+}
+.footer-mid {
+  margin: 0 auto;
+  padding-top: 70px;
+}
+.footer-desc {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  line-height: 50px;
+}
+
+.footer-links {
+  color: rgb(221, 221, 221);
+  padding-top: 60px;
+  width: 25%;
+  font-size: 30px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.rights {
+  opacity: 0.6;
+  text-align: center;
+  color: #ddd;
+  padding-top: 10px;
+  width: 100%;
+  margin: 0 auto;
+}
+.by {
+  opacity: 0.2;
+  text-align: center;
+  color: #ddd;
+  padding-top: 10px;
+  width: 100%;
+  margin: 0 auto;
+}
+.footer-desc a {
+  text-decoration: none;
+  color: rgb(174, 0, 255);
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) all 1s;
+}
+.footer-desc a:hover {
+  color: rgb(255, 255, 255);
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) all 1s;
+}
+.footer-block {
   display: flex;
   flex-direction: column;
   align-items: center;
-  }
-  .footer-links a{
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s all;
-    color:white;
-  }
-  .footer-links a:hover{
-    color: rgb(255, 0, 149);
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s all;
-    }
+}
+.footer-links a {
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s all;
+  color: white;
+}
+.footer-links a:hover {
+  color: rgb(255, 0, 149);
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s all;
+}
+.accordion {
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  padding: 18px;
+  width: 100%;
+  border: none;
+  font-size: 15px;
+  transition: 0.4s;
+  display: none;
+}
+
+.active, .accordion:hover {
+  background-color: rgb(49, 49, 49); 
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: rgb(39, 39, 39);
+}
