--- a/gg-project-master/css/container/container-home.css
+++ b/gg-project-master/css/container/container-home.css
@@ -83,14 +83,14 @@ body {
 .dropmenu:hover .dropmenu-content {
   display: block;
 }
-.theme {
+/* .theme {
   margin-right: 30px;
   font-size: 25px;
 }
 
 .but_theme {
   background: white;
-}
+} */
 .login-registry {
   display: flex;
   flex-direction: row;
@@ -99,6 +99,7 @@ body {
   margin-left: 83px;
 }
 .btn-registry {
+  
   text-decoration: none;
   padding: 15px 15px;
   border-radius: 5px;
@@ -122,6 +123,7 @@ body {
   color: rgb(255, 0, 157);
 }
 .btn-login {
+  
   margin-left: 10px;
   font-weight: 700;
   color: rgb(255, 0, 157);
@@ -175,17 +177,21 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 25px;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 15px;
   box-shadow: 0 -3px rgb(12, 0, 56) inset;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 }
+
 .slide-but:hover {
-  background: rgb(2, 0, 116);
+  background: none;
+  font-size: 30px;
+  border: rgb(255, 0, 179) solid 2px;
   transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
   color: rgb(255, 255, 255);
-  box-shadow: 0 3px rgb(16, 0, 73) inset;
+  box-shadow: inset 12px 50px 50px 50px rgba(255, 0, 200, 0.479);
 }
 .slide {
   font-size: 40px;
