--- a/gg-project-master/css/container/container-new-games.css
+++ b/gg-project-master/css/container/container-new-games.css
@@ -1,110 +1,111 @@
-
-
 .container__games {
-    max-width: 100%;
-    background-color: #2c2c2c;
-  }
-  .games-mid {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  .games-title{
-    padding: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(255, 62, 191);
-    font-weight: bolder;
-    font-size: 70px;
-  }
-  .game-desc {
-    width: 270px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-  }
-  .game-cap {
-    font-size: 25px;
-  }
-  .game-subtitle{
-    margin-left: 90px;
-    font-size: 26px;
-    width: 160px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  .icon-stars {
-    color: yellow;
-  }
-  .games-top {
-    opacity: 1;
-  
-    position: relative;
-    border-right: 0.7px solid rgba(140, 140, 140, 0.2);
-    transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.5s all;
-  }
-  .games-top:hover {
-    background-color: #3b3b3b;
-    transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.45s all;
-    border-right: 2px solid rgba(140, 140, 140, 0.3);
-    transform: scale(1.12);
-  }
-  .game-image {
-    width: 300px;
-    height: 290px;
-  }
-  .fa-shopping-basket {
-    color: rgb(132, 0, 255);
-    transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.3s all;
-  }
-  .fa-shopping-basket:hover {
-    color: white;
-    transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.3s all;
-  }
-  .games-bot {
-    display: none;
-    border-right: 0.7px solid rgba(140, 140, 140, 0.2);
-    transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.5s all;
-  }
-  .games-bot:hover {
-    background-color: #3b3b3b;
-    transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.45s all;
-    border-right: 2px solid rgba(140, 140, 140, 0.3);
-    transform: scale(1.12);
-  }
+  max-width: 100%;
+  background-color: #2c2c2c;
+}
+.games-mid {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.games-title {
+  padding-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(255, 62, 191);
+  font-weight: bolder;
+  font-size: 70px;
+}
+.game-desc {
+  width: 270px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.game-cap {
+  font-size: 25px;
+}
+.game-subtitle {
+  margin-left: 90px;
+  font-size: 26px;
+  width: 160px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.icon-stars {
+  color: yellow;
+}
+.games-top {
+  opacity: 1;
 
-  .but-side {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  .but-right {
-    width: 60px;
-    background: none;
-    border: none;
-  }
-  .but-left {
-    width: 60px;
-    background: none;
-    border: none;
-  }
-  .but-right:hover,.but-left:hover {
-    /* -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
+  position: relative;
+  border-right: 0.7px solid rgba(140, 140, 140, 0.2);
+  transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.5s all;
+}
+.games-top:hover {
+  background-color: #3b3b3b;
+  transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.45s all;
+  border-right: 2px solid rgba(140, 140, 140, 0.3);
+  transform: scale(1.12);
+}
+.game-image {
+  width: 300px;
+  height: 290px;
+}
+.fa-shopping-basket {
+  color: rgb(132, 0, 255);
+  transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.3s all;
+}
+.fa-shopping-basket:hover {
+  color: white;
+  transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.3s all;
+}
+.games-bot {
+  display: none;
+  border-right: 0.7px solid rgba(140, 140, 140, 0.2);
+  transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.5s all;
+}
+.games-bot:hover {
+  background-color: #3b3b3b;
+  transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.45s all;
+  border-right: 2px solid rgba(140, 140, 140, 0.3);
+  transform: scale(1.12);
+}
+
+.but-side {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.but-right {
+  width: 60px;
+  background: none;
+  border: none;
+}
+.but-left {
+  width: 60px;
+  background: none;
+  border: none;
+}
+.but-right:hover,
+.but-left:hover {
+  /* -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2); */
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3s all;
-  }
-  .fa-angle-left,.fa-angle-right{
-    font-size: 35px;
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3s all;
-  }
-  .fa-angle-left:hover,.fa-angle-right:hover{
-    color:rgb(255, 255, 255);
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3s all;
-  }
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3s all;
+}
+.fa-angle-left,
+.fa-angle-right {
+  font-size: 35px;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3s all;
+}
+.fa-angle-left:hover,
+.fa-angle-right:hover {
+  color: rgb(255, 255, 255);
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3s all;
+}
