--- a/gg-project-master/html/file.css
+++ b/gg-project-master/html/file.css
@@ -37,3 +37,48 @@
         margin: 5px 10px;
          } */
 }
+
+
+
+
+
+
+
+
+.btn{
+    position: relative;
+    display: block;
+    color: rgb(255, 41, 244);
+    font-size: 14px;
+    text-decoration: none;
+    margin: 30px 0;
+    border: 2px solid #4700779d;
+    padding: 14px 60px;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: 1s all ease;
+    border-radius: 5px;
+  
+  }
+  .btn::before{
+    background: #e000e0;
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: -1;
+    transition: all 0.6s ease;
+    border-radius: 5px;
+  }
+  .btn3::before{
+    width: 100%;
+    height: 0%;
+    transform: translate(-50%,-50%) rotate(45deg);
+  }
+  .btn3:hover::before{
+    height: 380%;
+  }
+  .btn:hover{
+    
+  }
