--- a/style/media.css
+++ b/style/media.css
@@ -16,7 +16,7 @@
     width: 100%;
   }
   .bonus-right {
-    background-image: url(https://images.wallpapersden.com/image/download/rgb-rain_bGtqbWyUmZqaraWkpJRobWllrWdma2U.jpg);
+    background-image: url(../style/gallery/wal-bon.jpg);
 
     width: 100%;
   }
