--- a/style/container/container-bonus.css
+++ b/style/container/container-bonus.css
@@ -11,7 +11,7 @@
 }
 
 .bonus-left {
-  background-image: url(https://images.wallpapersden.com/image/download/rgb-rain_bGtqbWyUmZqaraWkpJRobWllrWdma2U.jpg);
+  background-image: url(../gallery/wal-bon.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 65%;
