--- a/style/media.css
+++ b/style/media.css
@@ -45,7 +45,7 @@
     font-size: 55px;
   }
   body {
-    background-image: url(https://images.wallpapersden.com/image/download/cool-pattern-neon-art-2021_bGxobWmUmZqaraWkpJRoZWxorWZpZ2U.jpg);
+    background-image: url(../style/gallery/body1200px.jpg);
   }
   #slides {
     display: none;
