--- a/style/container/container-footer.css
+++ b/style/container/container-footer.css
@@ -70,8 +70,9 @@
   transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s all;
 }
 .accordion {
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
+  transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.5s all;
+
+  background-color: #131313c4;
   padding: 18px;
   width: 100%;
   border: none;
@@ -80,8 +81,12 @@
   display: none;
 }
 
-.active, .accordion:hover {
-  background-color: rgb(49, 49, 49); 
+.active,
+.accordion:hover {
+  transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.5s all;
+
+  background-color: rgb(49, 49, 49);
+  border-bottom: rgb(78, 78, 78) 1px inset;
 }
 
 .panel {
