--- a/style/container/container-events.css
+++ b/style/container/container-events.css
@@ -3,6 +3,8 @@
   background-color: #2c2c2c;
 }
 .events-title {
+  padding-bottom: 30px;
+
   padding-top: 100px;
   display: flex;
   justify-content: center;
