--- a/style/media.css
+++ b/style/media.css
@@ -109,11 +109,16 @@
   }
 }
 @media screen and (max-width: 620px){
-  
+  .games-top{
+    margin-top: 70px;
+    margin-bottom: 30px;
+  }
 }
 @media screen and (max-width: 600px) {
   .events-title {
-    font-size: 30px;
+    font-size: 50px;
+   padding-top: 40px;
+   padding-bottom: 30px;
   }
 }
 @media screen and (max-width: 560px) {
@@ -166,7 +171,7 @@
     font-size: 50px;
   }
   .events-title {
-    font-size: 50px;
+    font-size: 40px;
   }
   .partners-title {
     font-size: 40px;
@@ -187,7 +192,7 @@
 }
 @media screen and (max-width: 435px) {
   .events-title {
-    font-size: 38px;
+    font-size: 30px;
   }
   .target-cap {
     font-size: 50px;
