--- a/style/container/container-our-partners.css
+++ b/style/container/container-our-partners.css
@@ -18,6 +18,7 @@
     justify-content: space-around;
   }
   .partners {
+    padding: 3% 0;
     font-size: 60px;
     text-align: center;
     width: 50%;
