--- a/style/container/container-home.css
+++ b/style/container/container-home.css
@@ -311,18 +311,19 @@ body {
  color: white;
  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s all;
 }
-.sidenav .closebtn {
+.closebtn {
   text-decoration: none;
-  color: rgb(165, 165, 165);
-  font-size: 36px;
-  margin-left: 50px;
+  color: rgb(66, 66, 66);
+  font-size: 40px;
+  margin-left: 53px;
   position: absolute;
-  top: 0;
   right: 25px;
   transition: 1s;
+  display: none;
+  top: 15px;
 
 }
-.sidenav .closebtn:hover{
+.closebtn:hover{
   color: rgb(255, 255, 255);
   transition: 1s;
 }
