--- a/style/container/container-home.css
+++ b/style/container/container-home.css
@@ -256,23 +256,7 @@ body {
   text-align: center;
 }
 
-.sidenav {
-  display: flex;
-  text-align: center;
 
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  line-height: 70px;
-}
 .sidenav-links{
   color: rgb(221, 221, 221);
   font-size: 30px;
@@ -311,35 +295,45 @@ body {
  color: white;
  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s all;
 }
-.closebtn {
-  text-decoration: none;
-  color: rgb(66, 66, 66);
-  font-size: 40px;
-  margin-left: 53px;
-  position: absolute;
-  right: 25px;
-  transition: 1s;
-  display: none;
-  top: 15px;
 
-}
-.closebtn:hover{
-  color: rgb(255, 255, 255);
-  transition: 1s;
-}
-.sidespan {
+.burger-menu {
   display: none;
   font-size: 40px;
   cursor: pointer;
   transition: 1s;
+  padding-right: 40px;
 
 }
-.sidespan:hover{
+.burger-menu:hover{
   color:white;
   transition: 1s;
 }
+.sidenav {
+  top: 63px;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  left: -100%;
+  position: absolute;
+  background-color: rgb(75, 75, 75);
+  transition: 0.5s;
+  line-height: 70px;
+}
+.visible-list{
+  width: 100%;
+  height:100vh;
+  left: 0;
+  background-color: black;
+}
 
 @media screen and (max-width: 1000px) {
+  .burger-menu{
+    display: block;
+  }
   .nav-links {
     display: none;
   }
@@ -360,23 +354,19 @@ body {
   .fa-ghost{
     display: block;
   }
-  .fa-bars {
+  /* .fa-bars {
     display: inline-block;
     color: beige;
     font-size: 30px;
-  }
-  .sidespan {
-    padding-right: 20px;
-
-    display: block;
-  }
+  } */
+  
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {
+  /* .sidenav {
     padding-top: 15px;
   }
   .sidenav a {
     font-size: 18px;
-  }
+  } */
 }
