--- a/style/import/import.css
+++ b/style/import/import.css
@@ -5,7 +5,7 @@
 @import url('../container/container-footer.css');
 @import url('../container/container-new-games.css');
 @import url('../container/container-our-targets.css');
-
+@import url('../login.css');
 @import url('../media.css');
 
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap");
